--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,17 @@
 * {
-    
     text-align: center;
-  }
-
+}
+html{
+    height:100%;
+}
+/*About*/
 body {
+    height: 100%;
     overflow: auto;
     background-image: url("../images/greek-vase.png");
     background-repeat: repeat; 
     background-clip: border-box;
     margin: 0;
-
 }
 .top{
     position:relative;
@@ -31,8 +33,8 @@ a {
     float: right;
     text-decoration: none;
     color: #777777;
+
 }
-   
     a:link { color:#777777); }
     a:visited {color:#777777}
     a:hover { color: pink; }
@@ -40,6 +42,7 @@ a {
 
 .separator {
     float:right;
+    width: 20px;
 }
 hr{
     padding: 0px;
@@ -48,25 +51,27 @@ hr{
     border-color: #cccccc;
     background-color: #ffffff;
 }
-
+.clearfix::after{
+    content:"";
+    display: table;
+    clear: both;
+}
 .whiteBox {
     position:relative;
     display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
+    margin-bottom: 50px;
     padding: 40px;
     background-color: white;
     border-style: solid;
     border-color: #dddddd;
-    width:960px;
-    height: 500px;
+    width:960px; 
 }
 .aboutMe {
-    position: absolute;
     display:block;
     padding: 0px;
-    margin:auto;
     top: 40px;
     left: 3%;
     width: 200px;
@@ -74,59 +79,34 @@ hr{
     background-color: #ffffff;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-
 .greyLine{ 
-    position: absolute;
-    top: 100px;
-    display: block;
-    right:5%;
-    width: 90%;
-    height: 0px;
     border-style: solid;
     border-color:#dddddd;
     border-width: thin;
 }
 .profilePic {
-    position:absolute;
-    height: 35%;
-    left: 5%;
-    top: 120px; 
+    float: left;
+    width: 33%;
 }
-.textOne {
-    position: absolute;
-    display: block;
-    top: 120px;
-    left: 353px;
-    right: 5%;
+.text {
     text-align: justify;
     font-family: Arial, Helvetica, sans-serif;
     color: #777777;
-}
-.textOnePointOne {
-    position: absolute;
-    display: block;
-    top: 206px;
-    left: 353px;
-    right: 5%;
-    text-align: justify;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #777777;
+    float: right;
+    width: 61%;
 }
 .textTwo {
-    position:absolute;
-    display: block;
-    top:332px;
-    left: 5%;
-    right: 5%;
-    text-align: center;
+    text-align: justify;
     font-family: Arial, Helvetica, sans-serif;
     color: #777777;
+    float: right;
+}
+.what{
+    height:13%;
 }
 footer{
     position:absolute;
     width: 100%;
-    left:0;
-    bottom:0;
     height: 30px;
     clear: both;
     padding: 30px;
@@ -144,3 +124,65 @@ footer{
     border-width: medium;
     margin: 0px;
     }
+
+    /*Portfolio*/
+
+.separate{
+    margin: 20px 25px;
+    position:relative;
+    float: left;
+    height: 150px;
+    width: 150px;
+}
+.separate img {
+    float: left;
+    height: 150px;
+    width: 150px;
+}
+.separate p {
+    position: absolute;
+    bottom: 0px;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    width: 100%;
+    padding: 5px 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.footerSpace{
+    height:11%;
+}
+
+/* Contact */
+
+.contactContainer{
+    float: left;
+    text-align: left;
+}
+label{
+    font-family: Arial, Helvetica, sans-serif;
+    color: #666666;
+    float: left;
+    margin:20px 0;
+}
+input{
+    float:left;
+    height: 25px;
+    width: 100%;
+    text-align: left;
+}
+
+.space{
+    float: left;
+    height: 27px;
+    width: 0px;
+}
+.message{
+    height:200px;
+}
+.submit{
+    margin:10px;
+    width:10%;
+    height: 35px;
+    background-color: #4aaaa5;
+    color: #ffffff;
+}
